[add]: vue in js+html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="container">
 
-      <div class="slider">
+      <div class="slider" id="app-slider">
 
         <div class="items-wrapper">
           
