--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
           <div class="img-box item active">
 
-            <img :src="games[0].image">
+            <img :src="games[counter].image">
       
             <div class="text-box">
               <h2 class="title">Marvel's Spiderman Miles Morale</h2>
@@ -51,8 +51,8 @@
 
           <div class="thumbnails">
 
-            <div class="thumbnail" v-for="game in games">
-              <img :src="game.image" class="item-thumb">
+            <div class="thumbnail" v-for="(game, index) in games">
+              <img :src="game.image"  class="item-thumb">
             </div>
 
           </div>
@@ -61,7 +61,7 @@
             <i class="fa-solid fa-chevron-up"></i>
           </div>
 
-          <div class="slider-arrow down">
+          <div @click="goNext" :class="isActive ? 'active' : '' " class="slider-arrow down">
             <i class="fa-solid fa-chevron-down"></i>
           </div>
           
