--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
             <i class="fa-solid fa-chevron-down"></i>
           </div>
           
-          <div class="slider-arrow invert">
+          <div
+            @click="isForward = !isForward"
+            class="slider-arrow invert">
             <i class="fa-solid fa-retweet"></i>
           </div>
 
