--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
   <div class="main-wrapper">
 
-    <div class="container">
+    <div class="container"  id="app-slider">
 
-      <div class="slider" id="app-slider">
+      <div class="slider" @mouseenter="pauseShow" @mouseout="resumeShow">
 
-        <div class="items-wrapper">
+        <div class="items-wrapper" >
           
 
           <div class="img-box item active">
@@ -47,7 +47,7 @@
 
         </div>
 
-        <div class="sidebar">
+        <div class="sidebar" >
 
           <div class="thumbnails">
 
